<resources>
    <string name="app_name">guia gta 3</string>


    <!--activity home-->
    <string name="button_personagens_home">personagens</string>
    <string name="button_mapa_home">mapa</string>
    <string name="button_codigos_home">códigos</string>

    <!--activity personagens-->
    <string name="button_principais_personagens">principais</string>
    <string name="button_secundarios_personagens">secundarios</string>
    <string name="textView_secundarios_personagens">personagens secundarios</string>
    <string name="backgroundimage">backgroundimage</string>

    <!--activity mapa-->
    <!--activity codigos-->
    <string name="button_ps">Playstation</string>
    <string name="button_xbox">Xbox</string>
    <string name="button_pc">PC</string>
    <string name="textView_codigos_codigos">Códigos</string>
    <string name="textView_cheats_codigos">Cheats para PS2, PS3, PS4 e PS5</string>
    <string name="textView_cheats2_codigos">Aumentar nivel wanted R2,R2,L1,R2\nReceber dinheiro R2,R2,L1,L1\nSaude Cheia R2,R2,L1,R1</string>




</resources>