<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_personagens">

    <ImageView
        android:id="@+id/imageView_Background"
        android:layout_width="639dp"
        android:layout_height="1024dp"
        android:contentDescription="@string/backgroundimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundimage" />

    <TextView
        android:id="@+id/textView_secundarios_personagens"
        android:layout_width="329dp"
        android:layout_height="24dp"
        android:layout_marginTop="316dp"
        android:background="#9AA7B2"
        android:fontFamily="@font/pricedow"
        android:text="@string/textView_secundarios_personagens"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_Background" />

    <Button
        android:id="@+id/button_principais_personagens"
        android:layout_width="169dp"
        android:layout_height="64dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#545454"
        android:fontFamily="@font/pricedow"
        android:text="@string/button_principais_personagens"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button_secundarios_personagens"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_secundarios_personagens"
        android:layout_width="169dp"
        android:layout_height="64dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#545454"
        android:cursorVisible="false"
        android:fontFamily="@font/pricedow"
        android:text="@string/button_secundarios_personagens"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>