<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/imageView_logo_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="413dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/button_personagens_home"
        android:layout_width="200dp"
        android:layout_height="97dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="316dp"
        android:backgroundTint="#373737"
        android:fontFamily="@font/pricedow"
        android:text="@string/button_personagens_home"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_mapa_home"
        android:layout_width="200dp"
        android:layout_height="97dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#373737"
        android:fontFamily="@font/pricedow"
        android:text="@string/button_mapa_home"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_codigos_home"
        android:layout_width="200dp"
        android:layout_height="97dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#373737"
        android:fontFamily="@font/pricedow"
        android:text="@string/button_codigos_home"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>